edit apperance behavior- make sure recommendations are not visible before searching

--- a/static/styles.css
+++ b/static/styles.css
@@ -95,7 +95,7 @@ header {
 }
 
 #results {
-    display: flex;
+    display: none;
     flex-direction: row;
     gap: 20px;
     width: 1400px;
@@ -342,7 +342,7 @@ header {
     width: 50px;
     height: 50px;
     border: 5px solid #f3f3f3;
-    border-top: 5px solid #3498db;
+    border-top: 5px solid #7f5b55;
     border-radius: 50%;
     animation: spin 1s linear infinite;
     margin: 0 auto; /* Center horizontally */
